# imops

./: .gitignore  API.rst  MANIFEST.in  README.md  motmot.imops-0.5.8.tar.gz.delta  motmot.imops-0.5.8.tar.gz.id  pyproject.toml  requirements.txt  setup.py  stdeb.cfg
.github/workflows/: test.yml
examples/: simple.py
imops.egg-info/: stdeb.cfg
motmot.imops.egg-info/: stdeb.cfg
src/: c_numarray.pxd  c_numpy.pxd  c_python.pxd  color_convert.c  color_convert.h  imops.c  imops.pyx
